2012-02-24  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* Makefile.am, sfcbsem.c
	[ 3493493 ] Add sfcbsem
	(code by Viktor Mihajlovski)

2012-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c:
	[ 3457460 ] PAM_RHOST set wrong

2012-02-23 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* httpAdapter.c, sfcBroker.c:
	[ 3492362 ] Problem with whitespace trimming if local connect only

2012-02-17 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mlog.c, mlog.h, cimcClientSfcbLocal.c,
	  sfcBroker.c,sfcbinst2mof.c:
	[ 3488688 ] Don't spawn logger for clients

2012-02-15 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* mlog.c:
	[ 3487675 ] Log messages can be concatenated

2012-02-13  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* test/TestProviders/cmpiTestIndicationProvider.c:
	[ 3487419 ] TestIndication Provider Does Enable Correctly

	* interopProvider.c
	[ 3485830 ] SFCB Makes Redundant ActivateFilter Calls

2012-02-11 Narasimha Sharoff <nsharoff@us.ibm.com>

	* cimXmlParser.c
	[ 3486814 ] sfcb crashes while freeing the cimxml response

2012-02-11 Narasimha Sharoff <nsharoff@us.ibm.com>

	* sfcBroker.c
	[ 3462309 ] Do not allow multiple instances of sfcb

2012-02-11 Narasimha Sharoff <nsharoff@us.ibm.com>

	* indCIMXMLHandler.c
	[ 3485438 ] Segfault while retrying to deliver an indication

2012-02-03 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, sfcb.cfg.pre.in
	[ 3484025 ] Disable indication sequencing

2012-02-03  Chris Buccella  <buccella@linux.vnet.ibm.com>

	* profileProvider.c, providerMgr.c, default.reg.in, configure.ac, 
	  Makefile.am, test/xmltest/modifyInstance_regprofile.lines:
	[ 3483294 ] InternalProvider Should Handle SFCB_RegisteredProfile

2012-01-26 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>

	* interopProvider.c, indCIMXMLHandler.c, indRetryTest.sh
	[ 3478933 ] Sequence Number reset issues

2012-01-25 Michael Chase-Salerno <bratac@linux.vnet.ibm.com>
