@@ -31,6 +31,7 @@ Bugs fixed:
 - 3487675 Log messages can be concatenated
 - 3492362 Problem with whitespace trimming if local connect only
 - 3457460 PAM_RHOST set wrong
+- 3495343 Bad pointer references in trace statements
 
 Changes in 1.3.13
 =================
